# JoyCon2Mac

./: CMakeLists.txt  README.md  build_all.sh  build_gui.sh
JoyCon2Mac/: BLEManager.h  BLEManager.mm  MouseEmitter.mm  main.mm
JoyCon2MacApp/: DaemonBridge.swift  DriverExtensionInstaller.swift  JoyCon2MacApp.swift  NFCView.swift  SettingsView.swift
VirtualJoyConDriver/: VirtualJoyConDriver.cpp
